# j3s-music-upload

./: CLAUDE.md  Cargo.toml  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  SETUP_IMPROVEMENTS.md  config.toml.example  docker-compose.yml  test.sh
examples/: hash_password.rs
migrations/: 0005_add_spotify_to_upload_logs.sql  0006_add_ferric_enabled_config.sql  01_create_users_table.sql  02_create_config_table.sql  03_create_upload_logs_table.sql  04_add_library_path_to_users.sql
scripts/: create_admin.sh  init_admin.sh  setup.sh
src/: auth.rs  config.rs  db.rs  main.rs  models.rs  paths.rs  progress.rs  templates.rs
src/handlers/: admin.rs  auth_handlers.rs  mod.rs  spotify.rs  upload.rs  youtube.rs
templates/: admin.html  base.html  login.html  logs.html  settings.html  upload.html
