[package]
name = "j3s_music_upload"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "limit"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Templates
askama = "0.12"
askama_axum = "0.4"

# Authentication
argon2 = "0.5"
jsonwebtoken = "9"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Password generation
rand = "0.8"

# File handling
tempfile = "3"
walkdir = "2"

# YouTube downloading
tokio-process-stream = "0.3"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
